--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <body>
     <h1>Brew Recipes for Everyone!</h1>
 
-    <p>Hello and welcome to my webpage. I have created this site<br>
-        to share my beer, cider and mead recipes with others and to <br>
-        have others share their recipes. Below you will see an example<br>
-        of my Brown Ale, and you will also find a place to input your <br>
+    <p>Hello and welcome to my webpage. I have created this site
+        to share my beer, cider and mead recipes with others and to 
+        have others share their recipes. Below you will see an example
+        of my Brown Ale, and you will also find a place to input your 
         OG and FG to calculate your own ABV quickly.</p>
 
     <p>Here is an example of one of my beers so far.</p>
